--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
+/** Reset CSS CDN*/
+@import url("https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.css");
