--- a/src/app/assets/styles/index.scss
+++ b/src/app/assets/styles/index.scss
@@ -1,3 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 /** Reset CSS CDN*/
 @import url("https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.css");
+
+body {
+  color: #2c2c2c;
+}
