--- a/src/app/components/todo-item/todo-item.html
+++ b/src/app/components/todo-item/todo-item.html
@@ -1,9 +1,45 @@
-<li>
+<li
+  [attr.data-completed]="todo().completed ? true : null"
+  [attr.disabled]="!editing() ? true : null"
+>
   <input
     [id]="todo().id"
-    type="checkbox"
-    [ngModel]="todo().completed"
-    (input)="updateTodo()"
+    type="text"
+    [disabled]="!editing()"
+    [(ngModel)]="internalTitle"
   />
-  <label [for]="todo().id">{{ todo().title }}</label>
+
+  <fieldset>
+    <img
+      *ngIf="!editing() && !todo().completed"
+      src="/icons/pencil-solid-full.svg"
+      (click)="toggleEditing()"
+      alt="edit"
+      title="edit title"
+    />
+    @if (editing()) {
+    <img
+      src="/icons/floppy-disk-solid-full.svg"
+      (click)="updateTodo('edit')"
+      alt="save"
+      title="update title"
+    />
+    <img
+      src="/icons/xmark-solid-full.svg"
+      (click)="updateTodo('cancel')"
+      alt="cancel"
+      title="cancel changes"
+    />
+    }
+    <button
+      data-type="toggle"
+      (click)="updateTodo()"
+      [title]='`Mark TODO as ${todo().completed ? "incomplete" : "complete"}`'
+    >
+      {{ todo().completed ? "Undone" : "Done" }}
+    </button>
+    <button data-type="delete" (click)="removeTodo()" title="Hide TODO">
+      Remove
+    </button>
+  </fieldset>
 </li>
