--- a/src/app/components/app-header/app-header.html
+++ b/src/app/components/app-header/app-header.html
@@ -2,9 +2,9 @@
   <nav>
     <span routerLink="/">{{ name() }}</span>
     <ul>
+      <li routerLink="/"><span>Todos</span></li>
       <li routerLink="/about"><span>About</span></li>
       <li routerLink="/contact"><span>Contact</span></li>
-      <li routerLink="/todos"><span>Todos</span></li>
     </ul>
   </nav>
 </header>
