Todos - Allow mock deleting

--- a/src/app/components/todo-item/todo-item.html
+++ b/src/app/components/todo-item/todo-item.html
@@ -6,7 +6,7 @@
     [id]="todo().id"
     type="text"
     [disabled]="!editing()"
-    [(ngModel)]="internalTitle"
+    [(ngModel)]="_title"
   />
 
   <fieldset>
