Footer - Add Social Links

--- a/src/app/components/app-footer/app-footer.html
+++ b/src/app/components/app-footer/app-footer.html
@@ -1,3 +1,6 @@
 <footer>
-  <p>Copyright 2025, Uganda Forever</p>
+  <p>
+    <a href="https://www.linkedin.com/in/lone-do">LinkedIn</a>,
+    <a href="https://github.com/Lone-DO">Github&#64;lone-do</a>
+  </p>
 </footer>
