--- a/src/app/components/app-footer/app-footer.scss
+++ b/src/app/components/app-footer/app-footer.scss
@@ -1,7 +1,5 @@
 footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
+  text-align: center;
   width: 100vw;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0;
 }
