Todos - Patch Icons - attempt 2

--- a/src/app/components/todo-item/todo-item.html
+++ b/src/app/components/todo-item/todo-item.html
@@ -12,7 +12,7 @@
   <fieldset>
     <img
       *ngIf="!editing() && !todo().completed"
-      src="icons/pencil-solid-full.svg"
+      src="/icons/pencil-solid-full.svg"
       (click)="toggleEditing()"
       alt="edit"
       title="edit title"
